--- a/index.html
+++ b/index.html
@@ -2,71 +2,74 @@
 <html>
 
 <head>
-        <title>Home</title>
-        <script src="Gradient.js"></script>
-    <style>
-        body {
-            margin:0;
-            padding:0;
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-        }
-        #gradient-canvas {
-            --gradient-color-1: #6ec3f4;
-            --gradient-color-2: #3a3aff;
-            --gradient-color-3: #ff61ab;
-            --gradient-color-4: #E63946;
-        }
-    </style>
+  <title>Home</title>
+  <script src="Gradient.js"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
+    }
+
+    #gradient-canvas {
+      --gradient-color-1: #6ec3f4;
+      --gradient-color-2: #3a3aff;
+      --gradient-color-3: #ff61ab;
+      --gradient-color-4: #E63946;
+    }
+  </style>
   <meta name="description" content="">
-<!--         <meta name="viewport" content="width=device-width, initial-scale=1"> -->
-        <link rel="stylesheet" href="style.css">
-        <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="A.fonts,,_icomoon,,_style.css+css,,_owl.carousel.min.css+css,,_bootstrap.min.css+css,,_style.css,Mcc.iq-Irt1J63.css.pagespeed.cf.67EAq9-gxU.css">
+  <!--         <meta name="viewport" content="width=device-width, initial-scale=1"> -->
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:500&display=swap" rel="stylesheet">
+  <link rel="stylesheet"
+    href="A.fonts,,_icomoon,,_style.css+css,,_owl.carousel.min.css+css,,_bootstrap.min.css+css,,_style.css,Mcc.iq-Irt1J63.css.pagespeed.cf.67EAq9-gxU.css">
 </head>
 <header class="site-navbar" role="banner">
   <div class="container">
-  <div class="row align-items-center">
-  <div class="col-11 col-xl-2">
-  <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">Brand</a></h1>
+    <div class="row align-items-center">
+      <div class="col-11 col-xl-2">
+        <h1 class="mb-0 site-logo"><a href="index.html" class="text-white mb-0">Brand</a></h1>
+      </div>
+      <div class="col-12 col-md-10 d-none d-xl-block">
+        <nav class="site-navigation position-relative text-right" role="navigation">
+          <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
+            <li class="active"><a href="index.html"><span>Home</span></a></li>
+            <li class="has-children">
+              <a href="#"><span>For Students</span></a>
+              <ul class="dropdown arrow-top">
+                <li><a href="#">Menu One</a></li>
+                <li><a href="#">Menu Two</a></li>
+                <li><a href="#">Menu Three</a></li>
+                <li class="has-children">
+                  <a href="#">Games</a>
+                  <ul class="dropdown">
+                    <li><a href="trivia.html">Trivia Game</a></li>
+                    <li><a href="#">Menu Two</a></li>
+                    <li><a href="#">Menu Three</a></li>
+                    <li><a href="#">Menu Four</a></li>
+                  </ul>
+                </li>
+              </ul>
+            </li>
+            <li><a href="teachers.html"><span>For Teachers</span></a></li>
+            <li><a href="about.html"><span>About</span></a></li>
+            <li><a href="forum.html"><span>Forum</span></a></li>
+            <li><a href="login.html"><span>Login</span></a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#"
+          class="site-menu-toggle js-menu-toggle text-white active"><span class="icon-menu h3"></span></a></div>
+    </div>
   </div>
-  <div class="col-12 col-md-10 d-none d-xl-block">
-  <nav class="site-navigation position-relative text-right" role="navigation">
-  <ul class="site-menu js-clone-nav mr-auto d-none d-lg-block">
-  <li class="active"><a href="index.html"><span>Home</span></a></li>
-  <li class="has-children">
-  <a href="about.html"><span>Dropdown</span></a>
-  <ul class="dropdown arrow-top">
-    <li><a href="#">Menu One</a></li>
-    <li><a href="#">Menu Two</a></li>
-    <li><a href="#">Menu Three</a></li>
-  <li class="has-children">
-    <a href="#">Dropdown</a>
-    <ul class="dropdown">
-    <li><a href="#">Menu One</a></li>
-    <li><a href="#">Menu Two</a></li>
-    <li><a href="#">Menu Three</a></li>
-    <li><a href="#">Menu Four</a></li>
-  </ul>
-  </li>
-  </ul>
-  </li>
-<li><a href="listings.html"><span>Listings</span></a></li>
-<li><a href="about.html"><span>About</span></a></li>
-<li><a href="forum.html"><span>Forum</span></a></li>
-<li><a href="login.html"><span>Login</span></a></li>
-</ul>
-</nav>
-</div>
-<div class="d-inline-block d-xl-none ml-md-0 mr-auto py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle text-white active"><span class="icon-menu h3"></span></a></div>
-</div>
-</div>
 
 </header>
-  
+
 <body>
- 
-<!--         <div class="overlay">
+
+  <!--         <div class="overlay">
             <a class="close">&times;</a>
             <div class="overlay__content">
                 <a href="#">Services</a>
@@ -74,43 +77,44 @@
                 <a href="#">About</a>
             </div>
         </div> -->
-<!--         <script type="text/javascript" src="mobile.js"></script> -->
-<!-- 
+  <!--         <script type="text/javascript" src="mobile.js"></script> -->
+  <!-- 
   <section id="s1" name="page1" class="one-page-scroll--page" style="transform: translateY(0%); transition: transform 600ms ease-out 0s;" > -->
 
   <section>
     <div class="isLoaded" style="position: absolute">
-        <canvas id="gradient-canvas" style="width:100vw;height:100vh;z-index: -9999;" width="156" height="600" class="isLoaded"></canvas>
-        <script>
-            var gradient = new Gradient()
-            gradient.initGradient('#gradient-canvas');
-        </script>
+      <canvas id="gradient-canvas" style="width:100vw;height:100vh;z-index: -9999;" width="156" height="600"
+        class="isLoaded"></canvas>
+      <script>
+        var gradient = new Gradient()
+        gradient.initGradient('#gradient-canvas');
+      </script>
     </div>
-<!-- </section> -->
+    <!-- </section> -->
 
-  <div style="position: absolute" class="center">
+    <div style="position: absolute" class="center">
       <h1 style="z-index: 9999;">Hi</h1>
-  </div>
+    </div>
 
-<!--     <div style="position: absolute" class="typewriter">
+    <!--     <div style="position: absolute" class="typewriter">
   <h1>The cat and the hat.</h1>
     </div> -->
   </section>
-<!--   <section id="s2" name="page2" class="one-page-scroll--page color1" style="transform: translateY(100%); transition: transform 600ms ease-out 0s;" >
+  <!--   <section id="s2" name="page2" class="one-page-scroll--page color1" style="transform: translateY(100%); transition: transform 600ms ease-out 0s;" >
     <br>
  
      <h1>Page 2</h1>
     </section> -->
- 
+
 </body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <script src="https://unpkg.com/one-page-scroll/one-page-scroll.min.js"></script>
-    <script>
-    document.addEventListener('DOMContentLoaded', function() {
-      var app = new onePageScroll({
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    var app = new onePageScroll({
       el: document.querySelectorAll('section'),
-      });
     });
-    </script>
+  });
+</script>
 
 </html>
