--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <div class="col">
               <h1 class="pt-3">Who we are</h1>
               <div class="card" style="border-radius: 6%/30%;">
-                <div class="card-body" >
+                <div class="card-body">
                   <p class="card-text">We are a group of incoming college freshman who created this project during
                     Google's Computer Science Summer Institute (CSSI).</p>
                   <a href="https://buildyourfuture.withgoogle.com/programs/computer-science-summer-institute"
@@ -67,17 +67,23 @@
                   <img class="card-img" src="imgs/annapfp.jpg" style="border-radius:100%;">
                   <h3 class="card-title">Anna C</h3>
                   <p class="card-text">Incoming CS Major @ Columbia University</p>
-                  <a href="" class="btn btn-primary" onClick="parent.location='mailto:annajchr@gmail.com?subject=Student Oriented Coding&cc=ajc2321@columbia.edu'">Contact Me</a>
+                  <a href="" class="btn btn-primary"
+                    onClick="parent.location='mailto:annajchr@gmail.com?subject=Student Oriented Coding&cc=ajc2321@columbia.edu'">Contact
+                    Me</a>
                 </div>
               </div>
             </div>
             <div class="col">
               <div class="card" style="border-radius: 10%;">
                 <div class="card-body">
-                  <img class="card-img" src="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/FullSizeRender.jpg" style="border-radius: 50%;">
+                  <img class="card-img"
+                    src="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/FullSizeRender.jpg"
+                    style="border-radius: 50%;">
                   <h3 class="card-title">Xavier M</h3>
                   <p class="card-text">Incoming CS and Math Major @ Stanford University</p>
-                  <a href="" class="btn btn-primary" onClick="parent.location='mailto:xavmillan@ygmail.com?subject=Student Oriented Coding&cc=xavierm@stanford.edu'">Contact Me</a>
+                  <a href="" class="btn btn-primary"
+                    onClick="parent.location='mailto:xavmillan@ygmail.com?subject=Student Oriented Coding&cc=xavierm@stanford.edu'">Contact
+                    Me</a>
                 </div>
               </div>
             </div>
@@ -87,7 +93,9 @@
                   <img class="card-img" src="/imgs/salma-pfp.png">
                   <h3 class="card-title">Salma A</h3>
                   <p class="card-text">Incoming CS Major @ University of Washington</p>
-                  <a href="" class="btn btn-primary">Link to something</a>
+                  <a href="" class="btn btn-primary"
+                    nClick="parent.location='mailto:salmaaly47@gmail.com?subject=Student Oriented Coding&cc=salmaaly@uw.edu'">Contact
+                    Me</a>
                 </div>
               </div>
             </div>
