--- a/loggedin.html
+++ b/loggedin.html
@@ -27,13 +27,13 @@
                 <h1>Student Oriented Programming</h1>
                 <p>You are now signed in!</p>
 <br>
-                <button class="ghost" id="forum" onclick="home()">Home</button>
+                <button class="ghost" id="homebutton" onclick="home()">Home</button>
 
 <br>
-                <button class="ghost" id="forum" onclick="students()">Students</button>
+                <button class="ghost" id="studentbutton" onclick="students()">Students</button>
 
-              <br>
-                <button class="ghost" id="forum" onclick="teachers()">Teachers</button>
+              <br id="teachbrake">
+                <button class="ghost" id="teachbutton" onclick="teachers()">Teachers</button>
               
               <br>
                 <button class="ghost" id="forum" onclick="forum()">Forum</button>
@@ -116,7 +116,7 @@ firebase.initializeApp(firebaseConfig);
       window.location.href = "teachers.html";
     }
 
-
+var db = firebase.firestore();
     firebase.auth().onAuthStateChanged(function(user) {
     // user = firebase.auth().currentUser;
 
@@ -169,6 +169,52 @@ firebase.initializeApp(firebaseConfig);
             document.getElementById("name").innerHTML = user.displayName;
             document.getElementById("email").innerHTML = user.email;
             document.getElementById("uid").innerHTML = user.uid;
+
+            async function getData() {
+        var user = firebase.auth().currentUser;
+        var userID = user.uid;
+        var docRef = db.collection("user-data").doc(userID);
+        var doc = await docRef.get();
+        if (doc.exists) {
+          role = doc.data().role;
+          console.log(role);
+
+          // document.getElementById("studentNav").style.display = "none";
+          // document.getElementById("teachersNav").style.display = "none";
+
+          console.log(role);
+
+          if (role == "Demo") {
+            console.log('Demo');
+            // document.getElementById("studentNav").style.display = "block";
+            // document.getElementById("teachersNav").style.display = "block";
+            // document.getElementById('link').href = 'progression.html';
+            // document.getElementById('link').innerHTML = "Student Page";
+          }
+          else if (role == "Teacher") {
+            console.log('teacher');
+            // document.getElementById("studentNav").style.display = "block";
+            // document.getElementById("teachersNav").style.display = "block";
+            // document.getElementById('link').href = 'teachers.html';
+            // document.getElementById('link').innerHTML = "Teacher Page";
+          }
+          else {
+            console.log('student');
+            document.getElementById("teachbutton").style.display = "none";
+            document.getElementById("teachbrake").style.display = "none";
+            // document.getElementById("studentNav").style.display = "block";
+            // document.getElementById("teachersNav").style.display = "none";
+            // document.getElementById('link').href = 'progression.html';
+            // document.getElementById('link').innerHTML = "Student Page";
+          }
+        }
+      }
+      getData();
+      console.log(document.body.style.display);
+      document.body.style.display = "block";
+      console.log(document.body.style.display);
+      // document.getElementById("account").href = "loggedin.html";
+      // document.getElementById("account").innerHTML = '<span style="color: black">My Account</span>';
 
 
             // user.sendEmailVerification();
