--- a/login.html
+++ b/login.html
@@ -87,7 +87,12 @@
             <a class="cta" href="login.html">Login</a>
             <p class="menu cta">Menu</p> -->
 <!--   </header> -->
-    
+
+  <header>
+    <a href="index.html">
+<button class="ghost gblack" id="gohome">Home</button>
+    </a>
+  </header>
 
 <body>
 <!--     <header class="site-navbar" role="banner">
