--- a/about.html
+++ b/about.html
@@ -118,7 +118,8 @@
             <div class="col">
               <h3>Mission</h3>
               <div class="card" style="border-radius: 6%/30%;">
-                <h5 class="pt-3 pb-3 card-text">To encourage elementary school students to learn about computer science.
+                <h5 class="pt-3 pb-3 card-text">To encourage elementary and middle school students to learn about
+                  computer science.
                 </h5>
               </div>
             </div>
