--- a/teachers.html
+++ b/teachers.html
@@ -53,7 +53,8 @@
               <div class="card" style="border-radius: 5%/30%;">
                 <div class="card-body">
                   <p class="card-text">Student-Oriented Coding is an educational website whose purpose is to inspire and
-                    educate K-5 students to learn about Computer Science principles. With easy-to-play games and
+                    educate elementary and middle school students to learn about Computer Science principles. With
+                    easy-to-play games and
                     mini-lessons, it makes learning CS fun and accessible for students.</p>
                   <a href="about.html" class="btn btn-primary">Learn more about us</a>
                 </div>
