--- a/lesson2.html
+++ b/lesson2.html
@@ -128,7 +128,7 @@
   <h4>Creating Conditional Statements with Variables</h4>
   <br>
    <div style="margin: 0 auto; width: 656px; text-align: center;">
- <a href="https://cssi-main.xavim1.repl.co/forum.html?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33"><button class="btn btn-primary" id="help" style="width: 20%" >Need Help</button></a>
+ <a id="helplink" href="https://cssi-main.xavim1.repl.co/forum.html?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33"><button class="btn btn-primary" id="help" style="width: 20%" >Need Help</button></a>
   </div>
   <br>
   <p>By the end of they day, you will be able to use conditional statements to return different values to the console!
@@ -617,5 +617,16 @@ if (1 === 1){
   });
 
 </script>
+  <script>
+//https://cssi-main.xavim1.repl.co/forum.html?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33
+    
+     var getUrl = window.location;
+          var baseUrl = getUrl.protocol + "//" + getUrl.host + "/" + 'forum.html';
+          console.log(baseUrl);
+          let shareUrl = `${baseUrl}?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33`;
+          console.log(shareUrl);
+    document.getElementById('helplink').href = shareUrl;
+</script>
+  
 
 </html>
