--- a/lesson2.html
+++ b/lesson2.html
@@ -621,7 +621,13 @@ if (1 === 1){
 //https://cssi-main.xavim1.repl.co/forum.html?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33
     
      var getUrl = window.location;
-          var baseUrl = getUrl.protocol + "//" + getUrl.host + "/" + 'forum.html';
+            var baseUrl ="";
+if(getUrl.includes('github')){
+ baseUrl= getUrl.protocol + "//" + getUrl.host + "/" + getUrl.pathname.split('/')[1] + "/forum.html";
+}
+  else{
+    baseUrl= getUrl.protocol + "//" + getUrl.host + "/forum.html";
+  }
           console.log(baseUrl);
           let shareUrl = `${baseUrl}?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33`;
           console.log(shareUrl);
