--- a/lesson2.html
+++ b/lesson2.html
@@ -621,8 +621,10 @@ if (1 === 1){
 //https://cssi-main.xavim1.repl.co/forum.html?postid=1659583728012.I4PKXme0uqXYmvEymdTMj1sARy33
     
      var getUrl = window.location;
+    let urlString = getUrl + "";
+    console.log(urlString)
             var baseUrl ="";
-if(getUrl.includes('github')){
+if(urlString.includes('github')){
  baseUrl= getUrl.protocol + "//" + getUrl.host + "/" + getUrl.pathname.split('/')[1] + "/forum.html";
 }
   else{
