--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                   inaccessible, especially to underrepresented groups. Research shows that learning computer programming
                   at a young age boosts problem solving and computational thinking skills. But only 26% of elementary
                   schools in the nation offer these classes.<sup><a
-                      href="https://nap.nationalacademies.org/read/25912/chapter/8#100">1</a></sup></p>
+                      href="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/MASSN%20Graduation%20Pics%2006%2017%202022-593-modified.png">1</a></sup></p>
               </div>
             </div>
           </div>
