--- a/about.html
+++ b/about.html
@@ -110,7 +110,7 @@
                   inaccessible, especially to underrepresented groups. Research shows that learning computer programming
                   at a young age boosts problem solving and computational thinking skills. But only 26% of elementary
                   schools in the nation offer these classes.<sup><a
-                      href="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/MASSN%20Graduation%20Pics%2006%2017%202022-593-modified.png">1</a></sup></p>
+                      href="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/MASSN%20Graduation%20Pics%2006%2017%202022-593-modified.jpg">1</a></sup></p>
               </div>
             </div>
           </div>
@@ -212,22 +212,22 @@ el: document.querySelectorAll('section'),
             console.log('Demo');
             document.getElementById("studentNav").style.display = "block";
             document.getElementById("teachersNav").style.display = "block";
-            document.getElementById('link').href = 'progression.html';
-            document.getElementById('link').innerHTML = "Student Page";
+            // document.getElementById('link').href = 'progression.html';
+            // document.getElementById('link').innerHTML = "Student Page";
           }
           else if (role == "Teacher") {
             console.log('teacher');
             document.getElementById("studentNav").style.display = "block";
             document.getElementById("teachersNav").style.display = "block";
-            document.getElementById('link').href = 'teachers.html';
-            document.getElementById('link').innerHTML = "Teacher Page";
+            // document.getElementById('link').href = 'teachers.html';
+            // document.getElementById('link').innerHTML = "Teacher Page";
           }
           else {
             console.log('student');
             document.getElementById("studentNav").style.display = "block";
             document.getElementById("teachersNav").style.display = "none";
-            document.getElementById('link').href = 'progression.html';
-            document.getElementById('link').innerHTML = "Student Page";
+            // document.getElementById('link').href = 'progression.html';
+            // document.getElementById('link').innerHTML = "Student Page";
           }
         }
       }
