--- a/about.html
+++ b/about.html
@@ -90,7 +90,8 @@
             <div class="col">
               <div class="card" style="border-radius: 10%;">
                 <div class="card-body">
-                  <img class="card-img" src="/imgs/salma-pfp.png">
+                  <img class="card-img"
+                    src="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/MASSN%20Graduation%20Pics%2006%2017%202022-593-modified.jpg">
                   <h3 class="card-title">Salma A</h3>
                   <p class="card-text">Incoming CS Major @ University of Washington</p>
                   <a href="" class="btn btn-primary"
@@ -110,7 +111,8 @@
                   inaccessible, especially to underrepresented groups. Research shows that learning computer programming
                   at a young age boosts problem solving and computational thinking skills. But only 26% of elementary
                   schools in the nation offer these classes.<sup><a
-                      href="https://storage.googleapis.com/cssifinal-884f2.appspot.com/images/MASSN%20Graduation%20Pics%2006%2017%202022-593-modified.jpg">1</a></sup></p>
+                      href="https://www.laschoolreport.com/report-computer-science-unavailable-to-many-minority-kids/"></a></sup>
+                </p>
               </div>
             </div>
           </div>
