--- a/forum.html
+++ b/forum.html
@@ -175,7 +175,11 @@
           <div id="uploader" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
             aria-valuemax="100"></div>
         </div>
+
+        <div class="d-flex justify-content-center">
         <button type="button" class="btn btn-primary" id="submit2">Post</button>
+        </div>
+        
       </form>
     </div>
   </div>
