--- a/forum.html
+++ b/forum.html
@@ -554,7 +554,7 @@
         <p class="card-text">${content}</p>
         <hr>
         <button type="button" class="btn btn-primary openmodal" id="${docid}">Comments</button>
-        <button type="button" class="btn btn-secondary share" onclick="navigator.clipboard.writeText('${shareUrl}');">Share</button>
+        <button type="button" class="btn btn-secondary share" onclick="navigator.clipboard.writeText('${shareUrl}');">Copy Link</button>
         ${deleteButtonHTML}
         <br>
         <p class="card-text"><small class="text-muted">${timediff}</small></p>
@@ -582,7 +582,7 @@
           <br>
         <hr>
         <button type="button" class="btn btn-primary openmodal" id="${docid}">Comments</button>
-         <button type="button" class="btn btn-secondary share" onclick="navigator.clipboard.writeText('${shareUrl}');">Share</button>
+         <button type="button" class="btn btn-secondary share" onclick="navigator.clipboard.writeText('${shareUrl}');">Copy Link</button>
         
         ${deleteButtonHTML}
         <p class="card-text"><small class="text-muted">${timediff}</small></p>
