--- a/loggedin.html
+++ b/loggedin.html
@@ -24,7 +24,7 @@
     <div class="overlay-container">
         <div class="overlay">
             <div class="overlay-panel overlay-right">
-                <h1>Student Oriented Programming</h1>
+                <h1>Student Oriented Coding</h1>
                 <p>You are now signed in!</p>
 <br>
                 <button class="ghost" id="homebutton" onclick="home()">Home</button>
