--- a/accountselfservice.html
+++ b/accountselfservice.html
@@ -31,7 +31,7 @@
     <div class="overlay-container">
         <div class="overlay">
             <div class="overlay-panel overlay-right">
-                <h1>Name</h1>
+                <h1>Student Oriented Coding</h1>
                 <p>Account Self Service</p>
                 <button class="ghost" id="signIn" onclick="goToSignIn()">Go To Sign In</button>
             </div>
